Core completo, se agrega clases pre test para incluir test de las clases

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -5,7 +5,7 @@ website.NotFound=Website with id {0} not found
 
 technology.NotFound=Technology with id {0} not found
 
-rating.NotFound=Match with id {0} not found
+rating.NotFound=Rating with id {0} not found
 
 news.NotFound=News with id {0} not found
 
